fix section 2 to section 3 transition (overflow: auto;)

--- a/src/style.css.scss
+++ b/src/style.css.scss
@@ -59,6 +59,7 @@ section {
   article {
     max-width: 940px;
     margin: auto;
+    overflow: auto;
   }
 }
 
